testexample/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testexample
spec:
  selector:
    matchLabels:
      app: testexample
  replicas: 1
  template:
    metadata:
      labels:
        app: testexample
    spec:
      containers:
      - name: testexample
        image: witchpoutraining/testexample
        ports:
        - containerPort: 8080
