testexample/deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: testexample
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app:  testexample
